update k8s implementation
